--- a/firebase.json
+++ b/firebase.json
@@ -1,1 +1,36 @@
-{"hosting":{"public":"build/web","ignore":["firebase.json","**/.*","**/node_modules/**"],"rewrites":[{"source":"**","destination":"/index.html"}]},"emulators":{"dataconnect":{"dataDir":"dataconnect/.dataconnect/pgliteData"}},"dataconnect":{"source":"dataconnect"},"flutter":{"platforms":{"dart":{"lib/firebase_options.dart":{"projectId":"tenderiq-f763c","configurations":{"web":"1:1089395209020:web:38a4e6d2ae7d0078836439"}}}}}}
+{
+  "hosting": {
+    "public": "build/web",
+    "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
+    "rewrites": [
+      {
+        "source": "**",
+        "destination": "/index.html"
+      }
+    ]
+  },
+  "functions": {
+    "source": "functions",          
+    "runtime": "python310"         
+  },
+  "emulators": {
+    "dataconnect": {
+      "dataDir": "dataconnect/.dataconnect/pgliteData"
+    }
+  },
+  "dataconnect": {
+    "source": "dataconnect"
+  },
+  "flutter": {
+    "platforms": {
+      "dart": {
+        "lib/firebase_options.dart": {
+          "projectId": "tenderiq-f763c",
+          "configurations": {
+            "web": "1:1089395209020:web:38a4e6d2ae7d0078836439"
+          }
+        }
+      }
+    }
+  }
+}
