--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,11 @@ dependencies:
   firebase_core: ^3.14.0
   firebase_auth: ^5.6.0
   shared_preferences: ^2.5.3
+  cloud_firestore: ^5.6.9
+  syncfusion_flutter_pdfviewer: ^29.2.11
+  file_picker: ^10.2.0
+  firebase_storage: ^12.4.7
+  flutter_html: ^3.0.0
 
 
   default_connector:
